<resources>
    <string name="app_name">FitProject</string>
    <string name="sport" translatable="false">фитнес</string>
    <string name="settings" translatable="false">профиль</string>
    <string name="weight"> Ваш вес</string>
    <string name="height">Ваш рост</string>
    <string name="complexity">Сложность:</string>
    <string name="train">тренировка</string>
    <string name="morn">зарядка</string>
    <string name="warm">разминка</string>
    <string name="flex">растяжка</string>
    <string name="NEXT">далее</string>
    <string name="SKIP">пропустить</string>
    <string name="TO_NOW">к текущему</string>
</resources>